# No3_seed01_seed03_Project

./: .pylintrc  README.md  bird.py  bullet.py  config.py  constants.py  db.sqlite3  elements.py  error_log.txt  game.py  logs_20251127_132510.txt  logs_20251127_132658.txt  logs_20251127_132900.txt  main.py  meteor.py  pipe.py  player.py  pyproject.toml  renderer.py  settings.py  shape_renderer.py  ship.py  test_game.py  todo.db  track.py
models/: __init__.py  todo.py  user.py
routes/: __init__.py  auth.py  todo.py  todos.py
static/: style.css
static/css/: style.css
templates/: base.html  login.html  register.html  todos.html
templates/auth/: login.html  register.html
templates/todo/: index.html
utils/: logging.py
